clean up server.cfg
Now that we are including it in the docs, it's high time to tidy up
a lot of the confusing or useless cruft in there.

Also moved a few settings which it does not make sense for the admin to
modify, out of server.cfg into app.cfg.

Change-Id: I649f38d95f6da2a8e4edd209822660ca2ba3a5cd

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -1,53 +1,37 @@
 [global]
-# This is where all of your settings go for your production environment.
-# You'll copy this file over to your production server and provide it
-# as a command-line option to your start script.
-# Settings that are the same for both development and production
-# (such as template engine, encodings, etc.) all go in 
-# beaker/server/config/app.cfg
+# This defines the URL prefix under which the Beaker web application will be 
+# served. This must match the prefix used in the Alias and WSGIScriptAlias 
+# directives in /etc/httpd/conf.d/beaker-server.conf.
+# The default configuration places the application at: http://example.com/bkr/
+server.webpath = "/bkr/"
 
-# DATABASE
-
-# pick the form for your database
-# sqlobject.dburi="postgres://username@hostname/databasename"
-# sqlobject.dburi="mysql://username:password@hostname:port/databasename"
-# sqlobject.dburi="sqlite:///file_name_and_path"
-
-# If you have sqlite, here's a simple default to get you started
-# in development
-#sqlalchemy.dburi="sqlite:///devdata.sqlite"
-sqlalchemy.dburi="mysql://beaker:beaker@localhost/beaker?charset=utf8"
+# Database connection URI for Beaker's database, in the form:
+#   <driver>://<user>:<password>@<hostname>:<port>/<database>?<options>
+# The charset=utf8 option is required for proper Unicode support.
+# The pool_recycle setting is required for MySQL, which will (by default) 
+# terminate idle client connections after 10 hours.
+sqlalchemy.dburi = "mysql://beaker:beaker@localhost/beaker?charset=utf8"
 sqlalchemy.pool_recycle = 3600
 
 # If you want to send read-only report queries to a separate slave 
 # database, configure it here. If not configured, report queries will 
 # fall back to using the main Beaker database (above).
-#reports_engine.dburi = 'mysql://beaker_ro:beaker_ro@dbslave/beaker?charset=utf8'
+#reports_engine.dburi = "mysql://beaker_ro:beaker_ro@dbslave/beaker?charset=utf8"
 #reports_engine.pool_recycle = 3600
 
-# if you are using a database or table type without transactions
-# (MySQL default, for example), you should turn off transactions
-# by prepending notrans_ on the uri
-# sqlobject.dburi="notrans_mysql://username:password@hostname:port/databasename"
+# Set to True to enable sending emails.
+#mail.on = False
 
-# for Windows users, sqlite URIs look like:
-# sqlobject.dburi="sqlite:///drive_letter:/path/to/file"
+# TurboMail transport to use. The default 'smtp' sends mails over SMTP to the 
+# server configured below. Other transports may be available as TurboMail 
+# extension packages.
+#mail.transport = "smtp"
+# SMTP server where mails should be sent. By default we assume there is an 
+# SMTP-capable MTA running on the local host.
+#mail.smtp.server = "127.0.0.1"
 
-
-# Set rlimit_as if you want to limit the beaker processes address space to that
-# size in bytes
-# rlimit_as=1000000000
-
-##
-## TurboMail settings
-##
-mail.on = False
-mail.manager = 'immediate'
-mail.transport = 'smtp'
-mail.provider = 'smtp'
-mail.smtp.server = '127.0.0.1'
-
-beaker_email='root@localhost.localdomain'
+# The address which will appear as the From: address in emails sent by Beaker.
+#beaker_email = "root@localhost.localdomain"
 
 # If this is set to a value greater than zero, Beaker will enforce a limit on 
 # the number of concurrently running power/provision commands in each lab. Set 
@@ -57,68 +41,43 @@ beaker_email='root@localhost.localdomain'
 
 # Timeout for authentication tokens. After this many minutes of inactivity 
 # users will be required to re-authenticate.
-#visit.timeout=360
+#visit.timeout = 360
 
 # Secret key for encrypting authentication tokens. Set this to a very long 
 # random string and DO NOT disclose it. Changing this value will invalidate all 
 # existing tokens and force users to re-authenticate.
-#visit.token_secret_key = ''
+# If not set, a secret key will be generated and stored in /var/lib/beaker, 
+# however this configuration impacts performance therefore you should supply 
+# a secret key here.
+#visit.token_secret_key = ""
 
-identity.ldap.enabled=False
-#identity.soldapprovider.uri="ldaps://ldap.domain.com"
-#identity.soldapprovider.basedn="dc=domain,dc=com"
-#identity.soldapprovider.autocreate=True
-#identity.soldapprovider.timeout=20
-#identity.krb_auth_principal='HTTP/HOSTNAME@EXAMPLE.COM'
-#identity.krb_auth_keytab='/etc/krb5.keytab'
-
-# If using qpid, the principals are used as follows:-
-#  identity.krb_auth_qpid_principal - Any calls to the qpid broker uses this value
-# 
-# The idea is that whichever process is running and using qpid, should ensure that it sets the
-# krb_auth_qpid_principal to the correct value for itself. Ditto with the keytab
-
-#identity.krb_auth_qpid_principal='beaker-server/HOSTNAME@EXAMPLE.COM'
-#identity.krb_auth_qpid_keytab='/etc/beaker/beaker-server.keytab'
-
-#identity.krb_auth_beakerd_principal='beakerd/HOSTNAME@EXAMPLE.COM'
-#identity.krb_auth_beakerd_keytab='/etc/beaker/beakerd.keytab'
-
-#identity.krb_auth_server_principal='beaker-server/HOSTNAME@EXAMPLE.COM'
-#identity.krb_auth_server_keytab='/etc/beaker/beaker-server.keytab'
-
-
-# SERVER
-
-# if this is part of a larger site, you can set the path
-# to the TurboGears instance here
-server.webpath="/bkr/"
-
-tg.strict_parameters = True
-
-# Set to True if you are deploying your App behind a proxy
-# e.g. Apache using mod_proxy
-# base_url_filter.on = False
-
-# Set to True if your proxy adds the x_forwarded_host header
-# base_url_filter.use_x_forwarded_host = True
-
-# If your proxy does not add the x_forwarded_host header, set
-# the following to the *public* host url.
-# (Note: This will be overridden by the use_x_forwarded_host option
-# if it is set to True and the proxy adds the header correctly.
-# base_url_filter.base_url = "http://www.example.com"
+# Enable LDAP for user account lookup and password authentication.
+#identity.ldap.enabled = False
+# URI of LDAP directory.
+#identity.soldapprovider.uri = "ldaps://ldap.domain.com"
+# Base DN for looking up user accounts.
+#identity.soldapprovider.basedn = "dc=domain,dc=com"
+# If set to True, Beaker user acounts will be automatically created on demand 
+# if they exist in LDAP. Account attributes are populated from LDAP.
+#identity.soldapprovider.autocreate = False
+# Timeout (seconds) for LDAP lookups.
+#identity.soldapprovider.timeout = 20
+# Server principal and keytab for Kerberos authentication. If using Kerberos 
+# authentication, this must match the mod_auth_kerb configuration in 
+# /etc/httpd/conf.d/beaker-server.conf.
+#identity.krb_auth_principal = "HTTP/hostname@EXAMPLE.COM"
+#identity.krb_auth_keytab = "/etc/krb5.keytab"
 
 # These are used when generating absolute URLs (e.g. in e-mails sent by Beaker)
 # You should only have to set this if socket.gethostname() returns the wrong
-# name, for example if you are using cnames.
+# name, for example if you are using CNAMEs.
 #tg.url_domain = "beaker.example.com"
-# If your scheduler is multi-home and has a different hostname to your test
-# machines you can use the tg.lab_domain variable here to specify it
-# If tg.lab_domain is not set it will fall back to url_domain, and if that's
-# not set it will fall back to socket.gethostname() of course.
+#tg.url_scheme = "http"
+# If your scheduler is multi-homed and has a different hostname for your test
+# machines you can use the tg.lab_domain variable here to specify it.
+# If tg.lab_domain is not set it will fall back to tg.url_domain, and if that's
+# not set it will fall back to socket.gethostname().
 #tg.lab_domain = "this.hostname.from.lab.domain"
-tg.url_scheme = "http"
 
 # Tag for distros which are considered "reliable".
 # Broken system detection logic will be activated for distros with this tag 
@@ -150,7 +109,7 @@ tg.url_scheme = "http"
 #beaker.kernel_options_post = ""
 
 # See BZ#1000861
-# beaker.deprecated_job_group_permissions.on = True
+#beaker.deprecated_job_group_permissions.on = True
 
 # When generating MAC addresses for virtual systems, Beaker will always pick 
 # the lowest free address starting from this base address.
@@ -163,11 +122,13 @@ tg.url_scheme = "http"
 # When generating RPM repos, we can configure what utility
 # to use. So far, only 'createrepo' and 'createrepo_c' have been
 # tested. See https://github.com/Tojaj/createrepo_c
-#beaker.createrepo_command = 'createrepo'
+#beaker.createrepo_command = "createrepo"
 
-# Uncomment these two options when using HTTP digest authentication.
-#beaker.log_delete_user = 'log-delete'
-#beaker.log_delete_password = 'examplepassword'
+# If you have set up a log archive server (with beaker-transfer) and it 
+# requires HTTP digest authentication for deleting old logs, set the username 
+# and password here.
+#beaker.log_delete_user = "log-delete"
+#beaker.log_delete_password = "examplepassword"
 
 # If carbon.address is set, Beaker will send various metrics to carbon 
 # (collection daemon for Graphite) at the given address. The address must be 
@@ -176,36 +137,12 @@ tg.url_scheme = "http"
 #carbon.address = ('graphite.example.invalid', 2023)
 #carbon.prefix = 'beaker.'
 
-# If utilising qpid, ensure you have the python qpid
-# modules installed
-#beaker.qpid_topic_exchange = 'amqp.topic'
-
-# The hostname of the qpid broker
-#beaker.qpid_broker = 'localhost'
-
-# Set to True if the qpid broker requires krb authentication
-#beaker.qpid_krb_auth = False
-
 # Use OpenStack for running recipes on dynamically created guests.
 #openstack.identity_api_url = 'https://openstack.example.com:5000/v2.0'
 #openstack.dashboard_url = 'https://openstack.example.com/dashboard/'
 
-[/logs]
-static_filter.on = True
-static_filter.dir = "/var/www/beaker/logs"
-
-[/rpms]
-static_filter.on = True
-static_filter.dir = "/var/www/beaker/rpms"
-
-[/static]
-static_filter.on = True
-static_filter.dir = "/usr/share/bkr/server/static"
-
-[/favicon.ico]
-static_filter.on = True
-static_filter.file = "/usr/share/bkr/server/static/images/favicon.ico"
-
-# Beaker logs to syslog.
-# To adjust destination log filenames, edit the syslog config.
-# To adjust rotation settings, edit the logrotate config.
+# Set this to limit the Beaker web application's address space to the given 
+# size (in bytes). This may be helpful to catch excessive memory consumption by 
+# Beaker. On large deployments 1500000000 is a reasonable value.
+# By default no address space limit is enforced.
+#rlimit_as=
