--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -41,6 +41,12 @@ tg_mochikit.version = '1.4.2'
 # Set to True if the scheduler should be started
 tg.scheduler = False
 
+# When this is True, TG will raise an error if there are query params which 
+# cannot be matched to an argument of the controller method. In practice all 
+# our controller methods accept **kwargs so it makes no difference.
+# http://turbogears.org/1.0/docs/Configuration.html#turbogears-dev-cfg-and-prod-cfg-configuration-reference
+tg.strict_parameters = True
+
 # Set to True to allow paginate decorator redirects when page number gets
 # out of bound. Useful for getting the real page id in the url
 # paginate.redirect_on_out_of_range = True
@@ -61,8 +67,14 @@ visit.timeout=360
 
 sqlalchemy.convert_unicode=True
 
+# TurboMail settings
+# By default we send to SMTP on localhost.
+mail.manager = 'immediate'
+mail.transport = 'smtp'
+mail.smtp.server = '127.0.0.1'
 mail.message.encoding = 'utf-8'
 mail.utf8qp.on = True
+beaker_email='root@localhost.localdomain'
 
 # CherryPy's autoreload mechanism is not compatible with other WSGI containers.
 #autoreload.package="bkr.server"
