render pool descriptions as Markdown
Change-Id: I735369e42ec51a1e5e96eb7d56493adca522b4ec

--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,6 @@
 [submodule "bootstrap-datepicker"]
 	path = Server/assets/bootstrap-datepicker
 	url = https://github.com/eternicode/bootstrap-datepicker.git
+[submodule "marked"]
+	path = Server/assets/marked
+	url = https://github.com/chjj/marked.git
