Implement the HTTP API endpoint and Web UI for submitting an inventory job for a system
Bug: 846185
Change-Id: Ie85a46e807939feaea1ed4ceb8f0ca90ebb40b64

--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -92,6 +92,9 @@ basepath.assets_cache = '/var/cache/beaker/assets'
 assets.debug = False
 assets.auto_build = False
 
+# The first distro found will be picked
+beaker.inventory_osmajors = ['RedHatEnterpriseLinux6', 'CentOS6', 'RedHatEnterpriseLinux7', 'CentOS7','RedHatEnterpriseLinux5', 'CentOS5', 'Fedora22', 'Fedora21']
+
 # compress the data sends to the web browser
 # [/]
 # gzip_filter.on = True
