--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -146,3 +146,9 @@ sqlalchemy.pool_recycle = 3600
 # Beaker. On large deployments 1500000000 is a reasonable value.
 # By default no address space limit is enforced.
 #rlimit_as=
+
+# OS major names to try (in order of preference) for running inventory jobs on systems.
+# The default list includes RHEL, CentOS, and Fedora is suitable in most cases.
+# If you have special systems which do not support any of RHEL, CentOS, or Fedora
+# then you may need to extend the default list.
+#beaker.inventory_osmajors = ['RedHatEnterpriseLinux6', ...]
