update host filters
Contributed by Michael Petlan <mpetlan@redhat.com>.

Bug: 1217695
Change-Id: Ie2dac0275a322a3d88983f348e873aaed74c8898

--- a/Client/src/bkr/client/host-filters/00-ibm-cpus.conf
+++ b/Client/src/bkr/client/host-filters/00-ibm-cpus.conf
@@ -7,6 +7,14 @@ IBM__POWER5						<cpu><and><model_name op="like" value="%POWER5%" /></and></cpu>
 IBM__POWER5_					<cpu><and><model_name op="like" value="%POWER5 %" /></and></cpu>
 IBM__POWER5P					<cpu><and><model_name op="like" value="%POWER5+%" /></and></cpu>
 IBM__POWER6 					<cpu><and><model_name op="like" value="%power6%" /></and></cpu>
-IBM__POWER7						<cpu><and><model_name op="like" value="%POWER7%" /></and><or><and><model op="&gt;=" value="4128768"/><model op="&lt;=" value="4194303"/></and></or></cpu>
-IBM__POWER7P					<cpu><and><model_name op="like" value="%POWER7%" /></and><or><and><model op="&gt;=" value="4849664"/><model op="&lt;=" value="4915199"/></and></or></cpu>
+IBM__POWER7						<cpu><and><model_name op="like" value="%POWER7%" /><model op="&gt;=" value="4128768"/><model op="&lt;=" value="4194303"/></and></cpu>
+IBM__POWER7P					<cpu><and><model_name op="like" value="%POWER7%" /><model op="&gt;=" value="4849664"/><model op="&lt;=" value="4915199"/></and></cpu>
 IBM__POWER8						<cpu><and><model op="&gt;=" value="4915200"/><model op="&lt;=" value="4980735"/></and></cpu>
+
+IBM__POWER8_POWERKVM			<and><cpu><and><model op="&gt;=" value="4915200"/><model op="&lt;=" value="4980735"/></and></cpu><system><hypervisor op="==" value="PowerKVM" /></system></and>
+IBM__POWER8_POWERVM				<and><cpu><and><model op="&gt;=" value="4915200"/><model op="&lt;=" value="4980735"/></and></cpu><system><hypervisor op="==" value="PowerVM" /></system></and>
+IBM__POWER8_BAREMETAL			<and><cpu><and><model op="&gt;=" value="4915200"/><model op="&lt;=" value="4980735"/></and></cpu><system><hypervisor op="==" value="" /></system></and>
+
+IBM__POWERPC_KVM				<system><and><hypervisor op="==" value="PowerKVM" /><arch op="==" value="ppc64" /></and></system>
+IBM__POWERPC_VM					<system><and><hypervisor op="==" value="PowerVM" /><arch op="==" value="ppc64" /></and></system>
+IBM__POWERPC_BAREMETAL			<and><cpu><model_name op="like" value="%POWER%" /></cpu><system><and><hypervisor op="==" value="" /><arch op="==" value="ppc64" /></and></system></and>
