config: Don't minimise assets in development
Change-Id: I6ec67b8aedaab1f407f565daf24a36f40a963bd2

--- a/Server/dev.cfg
+++ b/Server/dev.cfg
@@ -57,5 +57,5 @@ beaker.reliable_distro_tag = 'RELEASED'
 
 basepath.assets = './assets'
 basepath.assets_cache = './assets-cache'
-assets.debug = False
+assets.debug = True
 assets.auto_build = True
