automatically create user accounts from REMOTE_USER_* variables
Bug: 1112925
Change-Id: Ic31866a82d9f1b1984f0466b776b675003c9a9c0

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -68,6 +68,13 @@ sqlalchemy.pool_recycle = 3600
 #identity.krb_auth_principal = "HTTP/hostname@EXAMPLE.COM"
 #identity.krb_auth_keytab = "/etc/krb5.keytab"
 
+# Automatically create user accounts if the user successfully authenticates 
+# via Apache but there is no matching account in Beaker. The automatic creation 
+# will only happen if REMOTE_USER_FULLNAME and REMOTE_USER_EMAIL variables are 
+# also populated in the WSGI environment.
+# mod_lookup_identity and mod_auth_mellon can be configured to do this.
+#identity.autocreate = True
+
 # These are used when generating absolute URLs (e.g. in e-mails sent by Beaker)
 # You should only have to set this if socket.gethostname() returns the wrong
 # name, for example if you are using CNAMEs.
