tests: populate database properly in server unit tests
Currently it is just creating the tables but not inserting all the
"constants"/pre-defined rows we expect to be present, such as config
items. We need those for all the model code and data_setup to work
properly.

Change-Id: I894f611dac819580455631d53bd8b217fccff267

--- a/Server/bkr/server/tests/unit-test.cfg
+++ b/Server/bkr/server/tests/unit-test.cfg
@@ -1,3 +1,9 @@
 [global]
 sqlalchemy.dburi="sqlite://"
 visit.token_secret_key = 'testkey'
+tg.url_domain='localhost:9090'
+tg.url_scheme='http'
+basepath.rpms = './test-rpms'
+basepath.repos = './test-repos'
+basepath.logs = './test-server-joblogs'
+basepath.harness = './test-harnessdir'
