disable implicit job sharing
Bug: 1280178
Change-Id: I75a7a3848221faf75326ea33dbf982787e13917d

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -116,7 +116,7 @@ sqlalchemy.pool_recycle = 3600
 #beaker.kernel_options_post = ""
 
 # See BZ#1000861
-#beaker.deprecated_job_group_permissions.on = True
+#beaker.deprecated_job_group_permissions.on = False
 
 # When generating MAC addresses for virtual systems, Beaker will always pick 
 # the lowest free address starting from this base address.
