enforce limits on number of results and result logs per recipe
Bug: 1293007
Change-Id: I737d76cb37c8535ea567cc596c1eb4008d9c7d34

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -154,6 +154,14 @@ sqlalchemy.pool_recycle = 3600
 # By default no address space limit is enforced.
 #rlimit_as=
 
+# These limits are applied to all running recipes. They are intended as 
+# a last-resort sanity check, to prevent a runaway task from accidentally 
+# producing so many results that it can cause problems elsewhere in Beaker (for 
+# example, excessive memory usage when rendering the results).
+# Setting a limit to 0 means the limit will not be enforced.
+#beaker.max_results_per_recipe = 7500
+#beaker.max_result_logs_per_recipe = 7500
+
 # OS major names to try (in order of preference) for running inventory jobs on systems.
 # The default list includes RHEL, CentOS, and Fedora is suitable in most cases.
 # If you have special systems which do not support any of RHEL, CentOS, or Fedora
