enforce limit on task logs as well as result logs
Beah will upload result logs against the task instead, if it sees an
error uploading them against the result, so we need to apply the limit
to task logs as well.

Bug: 1293007
Change-Id: I716cb9002b7c7776f61c0f36d44a0b4aabafe22c

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -160,7 +160,7 @@ sqlalchemy.pool_recycle = 3600
 # example, excessive memory usage when rendering the results).
 # Setting a limit to 0 means the limit will not be enforced.
 #beaker.max_results_per_recipe = 7500
-#beaker.max_result_logs_per_recipe = 7500
+#beaker.max_logs_per_recipe = 7500
 
 # OS major names to try (in order of preference) for running inventory jobs on systems.
 # The default list includes RHEL, CentOS, and Fedora is suitable in most cases.
