tests: move fake motd to /usr/share
Currently it ends up in /usr/lib/python2.* which means the actual path
varies across RHEL6 and RHEL7, which makes life difficult in the dogfood
task where we need to configure the right path.

Change-Id: I47d938dac5a75e4d44d79941e4dc38fc3a3233b2

--- a/IntegrationTests/Makefile
+++ b/IntegrationTests/Makefile
@@ -10,7 +10,8 @@ build:
 
 .PHONY: install
 install: build
-	python setup.py install -O1 --skip-build --root $(DESTDIR)
+	python setup.py install -O1 --skip-build \
+	    --install-data=/usr/share --root $(DESTDIR)
 
 .PHONY: clean
 clean:
