--- a/IntegrationTests/server-test.cfg
+++ b/IntegrationTests/server-test.cfg
@@ -34,7 +34,7 @@ mail.provider = 'smtp'
 mail.smtp.server = '127.0.0.1:19999'
 beaker_email = 'beaker-integration-tests@example.com'
 beaker.reliable_distro_tag = 'RELEASED'
-beaker.motd = 'src/bkr/inttest/server/motd.xml'
+beaker.motd = 'motd.xml'
 beaker.max_running_commands = 10
 beaker.ks_meta = ''
 beaker.kernel_options = 'noverifyssl'
