censor power passwords in failure message
We reduce the number of attempts in tests from 5 down to 2, just so that
the tests for failing power commands don't need to wait many minutes for
all the exponential backoff retries.

Bug: 1358063
Change-Id: I1fb622bc4b4555e4ddde8e562fb95ded015d9981

--- a/LabController/src/bkr/labcontroller/default.conf
+++ b/LabController/src/bkr/labcontroller/default.conf
@@ -7,6 +7,9 @@ SLEEP_TIME = 20
 # Timeout for fetching distro images.
 IMAGE_FETCH_TIMEOUT = 120
 
+# Number of times to attempt failing power commands.
+POWER_ATTEMPTS = 5
+
 # How often to renew our session on the server
 RENEW_SESSION_INTERVAL = 300
 
