use Keystone Trusts for OpenStack authentication
Bug: 1100519
Change-Id: I2b7dd47dda43f93eb95b60b44478d47ef3ec3753

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -145,8 +145,12 @@ sqlalchemy.pool_recycle = 3600
 #carbon.prefix = 'beaker.'
 
 # Use OpenStack for running recipes on dynamically created guests.
+# Beaker uses the credentials given here to authenticate to OpenStack,
+# when creating OpenStack instances on behalf of users.
 #openstack.identity_api_url = 'https://openstack.example.com:5000/v2.0'
 #openstack.dashboard_url = 'https://openstack.example.com/dashboard/'
+#openstack.username = ""
+#openstack.password = ""
 
 # Set this to limit the Beaker web application's address space to the given 
 # size (in bytes). This may be helpful to catch excessive memory consumption by 
