default to createrepo_c instead of createrepo
Bug: 1347156
Change-Id: If78d7002e3ba5c93ce993c30c822bafbb95daba3

--- a/Server/server.cfg
+++ b/Server/server.cfg
@@ -126,10 +126,10 @@ sqlalchemy.pool_recycle = 3600
 # one candidate system. You can disable this behaviour here.
 #beaker.priority_bumping_enabled = True
 
-# When generating RPM repos, we can configure what utility
-# to use. So far, only 'createrepo' and 'createrepo_c' have been
-# tested. See https://github.com/Tojaj/createrepo_c
-#beaker.createrepo_command = "createrepo"
+# When generating RPM repos, we can configure what utility to use. The newer 
+# createrepo_c implementation is recommended because it is faster and more 
+# memory-efficient, but the original createrepo command can also be used.
+#beaker.createrepo_command = "createrepo_c"
 
 # If you have set up a log archive server (with beaker-transfer) and it 
 # requires HTTP digest authentication for deleting old logs, set the username 
