--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -56,6 +56,8 @@ install: man
 	install -m0644 _build/man/*.1 $(DESTDIR)/usr/share/man/man1
 	install -m0644 _build/man/*.8 $(DESTDIR)/usr/share/man/man8
 	ln -s bkr-distro-trees-verify.1.gz $(DESTDIR)/usr/share/man/man1/bkr-distros-verify.1.gz
+	ln -s bkr-system-list.1.gz $(DESTDIR)/usr/share/man/man1/bkr-list-systems.1.gz
+	ln -s bkr-labcontroller-list $(DESTDIR)/usr/share/man/man1/bkr-list-labcontrollers.1.gz
 
 .PHONY: check
 
