add httpd alias for anamon3
Bug: 1442147
Change-Id: Iad6f706d214e10eddde8f1b133012370d1e96738

--- a/LabController/apache/beaker-lab-controller.conf
+++ b/LabController/apache/beaker-lab-controller.conf
@@ -1,4 +1,5 @@
 Alias /beaker/anamon /usr/share/bkr/lab-controller/anamon
+Alias /beaker/anamon3 /usr/share/bkr/lab-controller/anamon3
 Alias /beaker/anamon.init /usr/share/bkr/lab-controller/anamon.init
 AliasMatch ^/beaker/(yum.*\.rpm)$ /usr/share/bkr/lab-controller/$1
 AliasMatch ^/beaker(.*)?$ "/var/www/beaker$1"
