remove support for worker_key authentication
This came from Kobo but it was never implemented on the Beaker server
side.

Change-Id: Ia9513ad70fbb8da87979f71803b55828beee5cd0

--- a/Common/bkr/common/default.conf
+++ b/Common/bkr/common/default.conf
@@ -1,16 +1,12 @@
 # Hub xml-rpc address.
 HUB_URL = "https://localhost/hub/xmlrpc"
 
-# Hub authentication method. Example: krbv, password, worker_key
+# Hub authentication method. Example: krbv, password
 AUTH_METHOD = "krbv"
 
 # Username and password
 #USERNAME = ""
 #PASSWORD = ""
-
-# A unique worker key used for authentication.
-# I't recommended to use krbv auth in production environment instead.
-#WORKER_KEY = ""
 
 # Kerberos principal. If commented, default principal obtained by kinit is used.
 #KRB_PRINCIPAL = ""
