--- a/IntegrationTests/labcontroller-test.cfg
+++ b/IntegrationTests/labcontroller-test.cfg
@@ -1,7 +1,7 @@
 # Hub xml-rpc address.
 HUB_URL = "http://localhost:9090"
 
-# Hub authentication method. Example: krbv, password, worker_key
+# Hub authentication method. Example: krbv, password
 AUTH_METHOD = "password"
 
 # Username and password
