--- a/LabController/labcontroller.conf
+++ b/LabController/labcontroller.conf
@@ -2,7 +2,7 @@
 #HUB_URL = "https://localhost:8080"
 HUB_URL = "http://localhost/bkr"
 
-# Hub authentication method. Example: krbv, password, worker_key
+# Hub authentication method. Example: krbv, password
 AUTH_METHOD = "password"
 #AUTH_METHOD = "krbv"
 
