pylint: E1002 is never triggered
Change-Id: Ic408f4f20f0ae4102d5afae1a5fee8c0f02f6e79

--- a/Misc/pylint-errors.cfg
+++ b/Misc/pylint-errors.cfg
@@ -4,7 +4,7 @@
 init-hook='import sys; sys.path[0:0] =["/usr/lib/python2.6/site-packages/CherryPy-2.3.0-py2.6.egg/", "/usr/lib/python2.7/site-packages/CherryPy-2.3.0-py2.7.egg/"]'
 
 [MESSAGES CONTROL]
-disable=I,R,C,E1101,E1103,E1002,E0012
+disable=I,R,C,E1101,E1103,E0012
 # pylint gets confused by SQLAlchemy so we disable E1101, E1103, and E1002
 # to keep the noise down.
 # Once we get the pylint errors down, we can start looking into the warnings
