Serving /var/www/beaker/{repos,harness} by gunicorn
Change-Id: I4af172de2fbdc17daa95b5d4db00937f7a875b86

--- a/Server/bkr/server/config/app.cfg
+++ b/Server/bkr/server/config/app.cfg
@@ -111,6 +111,14 @@ static_filter.dir = "/var/www/beaker/logs"
 static_filter.on = True
 static_filter.dir = "/var/www/beaker/rpms"
 
+[/harness]
+static_filter.on = True
+static_filter.dir = "/var/www/beaker/harness"
+
+[/repos]
+static_filter.on = True
+static_filter.dir = "/var/www/beaker/repos"
+
 [/schema]
 static_filter.on = True
 static_filter.dir = "%(top_level_dir)s/common/schema"
