Set basepaths in dev server config to writable dir
Set paths for rpms, repos, logs and harness to a directory with write
access for non-root user

Change-Id: Icd718f93caffbed42b00afcfe92c069d30c4bf85

--- a/Server/dev.cfg
+++ b/Server/dev.cfg
@@ -57,5 +57,9 @@ beaker.reliable_distro_tag = 'RELEASED'
 
 basepath.assets = './assets'
 basepath.assets_cache = './assets-cache'
+basepath.rpms = './test-rpms'
+basepath.repos = './test-repos'
+basepath.logs = './test-server-joblogs'
+basepath.harness = './test-harnessdir'
 assets.debug = True
 assets.auto_build = True
