exclude i386 and RHEL3-5 trees from EFI GRUB menu
Since we know those don't actually have x86 EFI support, we can exclude
them from the menu to save a bit of space.

Bug: 1420471
Change-Id: I9e3308ad0741874a57d73c6c185e7869e9d0f87d

--- a/LabController/src/bkr/labcontroller/default.conf
+++ b/LabController/src/bkr/labcontroller/default.conf
@@ -19,5 +19,8 @@ CACHEPATH = "/var/www/beaker/logs"
 # Location of system console logs
 CONSOLE_LOGS = "/var/consoles"
 
-# Regex string to use to find panics
+# Regex pattern to use to find panics
 PANIC_REGEX = "Kernel panic|Oops: |general protection fault|general protection handler: wrong gs|\(XEN\) Panic"
+
+# Regex pattern which matches OS major names which do not support x86 EFI
+EFI_EXCLUDED_OSMAJORS_REGEX = "RedHatEnterpriseLinux(3|4|Server5|Client5|ServerGrid5)|Fedora1[234567]"
